fixed dark mode minimal bar

--- a/akstrap_v1.0/modules/akstrap_def/css/components/atoms/navbars/minimal_bar.css
+++ b/akstrap_v1.0/modules/akstrap_def/css/components/atoms/navbars/minimal_bar.css
@@ -26,7 +26,7 @@
 }
 
 html[data-theme='dark'] .minimal_bar{
-    --default :         #e9e9e9;
+    --default :         var(--bg);
     --default_txt:      #404040;
     --default_hover_txt:  var(--default_txt);
 }
